vcluster_versioned_docs/version-0.31.0/_partials/manage/upgrade-version.mdx
import Flow, { Step } from "@site/src/components/Flow";

import Tabs from '@theme/Tabs'
import TabItem from '@theme/TabItem'
import CodeBlock from '@theme/CodeBlock';
import PageVariables from '@site/src/components/PageVariables';
import InterpolatedCodeBlock from '@site/src/components/InterpolatedCodeBlock';
import TerraformDeploy from '!!raw-loader!./terraform-deploy-changes.tf'

<PageVariables VCLUSTER_NAME="myvcluster" VCLUSTER_NAMESPACE="vcluster" VCLUSTER_VERSION="0.30.0"/>

<Tabs
  groupId="get-started"
  defaultValue="cli"
  values={[
	{ label: "vCluster CLI", value: "cli" },
    { label: 'Helm', value: 'helm', },
    { label: 'Terraform', value: 'terraform', },
    { label: 'Argo CD', value: 'argo', },
    { label: 'Cluster API', value: 'cluster-api', },
  ]
}>

<TabItem value="cli">

Upgrade your CLI to the version of vCluster that you want to upgrade your virtual cluster to.

<InterpolatedCodeBlock
  code={`vcluster upgrade --version [[GLOBAL:VCLUSTER_VERSION]]
  vcluster create --upgrade [[GLOBAL:VCLUSTER_NAME]] -n [[GLOBAL:VCLUSTER_NAMESPACE]] -f vcluster.yaml`}
  language="bash"
/>

</TabItem>
<TabItem value="helm">

<InterpolatedCodeBlock
  code={`
    helm upgrade --install [[GLOBAL:VCLUSTER_NAME]] vcluster \\
      --values vcluster.yaml \\
      --repo https://charts.loft.sh \\
      --namespace [[GLOBAL:VCLUSTER_NAMESPACE]] \\
      --repository-config='' \\
      --version [[GLOBAL:VCLUSTER_VERSION]]`}
  language="bash"
/>

</TabItem>
<TabItem value="terraform">

<Flow>
  <!--<Step>

    Update the `main.tf` file.

      <CodeBlock language="hcl">{TerraformDeploy}</CodeBlock>

    Replace:
    - `$RESOURCE_NAME` with the name of the local resource that you deployed. 
    - `$VCLUSTER_NAME` with the name of your vCluster.
    - `$VCLUSTER_NAMESPACE` with the namespace that is running the vCluster.
    - `$VCLUSTER_VERSION` with the version of vCluster that you want to upgrade to.

  </Step>-->
  <Step>

    Generate a new plan.

      ```bash
      terraform plan
      ```

    Verify that the provider can access your cluster and that the proposed changes are correct.

  </Step>
  <Step>
    Upgrade your vCluster.

    ```bash
    terraform apply
    ```
  </Step>
</Flow>

</TabItem>
<TabItem value="argo">

<Flow>
  <Step>
    Update ArgoCD `Application` file to update the version that you want to upgrade to.

    <InterpolatedCodeBlock
      code={`apiVersion: argoproj.io/v1alpha1
  kind: Application
  metadata:
    name: [[GLOBAL:VCLUSTER_NAME]]
    namespace: argocd
  spec:
    project: default
    source:
      chart: vcluster
      repoURL: https://charts.loft.sh
      targetRevision: [[GLOBAL:VCLUSTER_VERSION]]
      helm:
        releaseName: [[GLOBAL:VCLUSTER_NAME]]
        valueFiles:
          - vcluster.yaml
    destination:
      server: https://kubernetes.default.svc
      namespace:[[GLOBAL:VCLUSTER_NAMESPACE]]`}
      language="yaml"
    />

  </Step>
  
  <Step>

    Commit and push this updated file to your configured ArgoCD repository.
    <p></p>
    (Optional) Commit and push an updated `vcluster.yaml` file to your configured ArgoCD repository.
      
  </Step>
  <Step>

    Synchronize your ArgoCD repository with your configured cluster.
    
  </Step>
</Flow>



</TabItem>
<TabItem value="cluster-api">

Learn more about [Cluster API Provider for vCluster](https://github.com/loft-sh/cluster-api-provider-vcluster).

<Flow>
<Step>

   Install the vCluster provider.

   ```bash
   clusterctl init --infrastructure vcluster:v0.2.0
   ```
</Step>
<Step>

   Export environment variables to be used by the cluster API provider to create an updated manifest. The manifest will be applied to your Kubernetes
   cluster, which will update your vCluster with the updated configuration options.
   
   ```bash
    export VCLUSTER_YAML=$(awk '{printf "%s\\n", $0}' vcluster.yaml)
    ```
</Step> 
<Step>
  Regenerate the manifest and apply the updated manifest.
    
    <InterpolatedCodeBlock
      code={`clusterctl generate cluster [[GLOBAL:VCLUSTER_NAME]] \\
    --infrastructure vcluster \\
    --target-namespace [[GLOBAL:VCLUSTER_NAMESPACE]] \\
      | kubectl apply -f -`}
      language="bash"
    />

:::note Kubernetes Version
The Kubernetes version for the vCluster is not set at the CAPI provider command. It is configured the `vcluster.yaml` file based on your Kubernetes distribution.
:::

</Step>
<Step>
   Wait for vCluster to be updated by watching for the vCluster custom resource to report a `ready` status.
   <InterpolatedCodeBlock
      code={`kubectl wait --for=condition=ready vcluster -n [[GLOBAL:VCLUSTER_NAMESPACE]] [[GLOBAL:VCLUSTER_NAME]] --timeout=300s`}
      language="bash"
   />
</Step>
</Flow>

</TabItem>
</Tabs>
